--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,5 +1,8 @@
-<ngx-spinner>
-    <div class="spinner">
-        <img id="image" src="https://i.ibb.co/bzkxx2K/Logo-removebg-preview.png" alt="Logo-removebg-preview" border="0">
-    </div>
+<ngx-spinner
+visible="false"
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+>
+  <img id='image' src="https://i.ibb.co/bzkxx2K/Logo-removebg-preview.png">
 </ngx-spinner>
