--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -19,7 +19,7 @@
         <div class="one">
             <img src="https://sukripta.github.io/parking-go/assets/images/Image-1.jpeg">
             <div class="hidden">
-                <p id="one">There are parking spaces scattered across any city, but are difficult to find when you need them on the go.</p>
+                <p id="one">There are parking spaces scattered across any city, but are difficult to find when you need them on the go.</p><br>
                 <button class="btn-link">About Us&nbsp;<i class="fa fa-play" aria-hidden="true"></i></button>
             </div>
 
@@ -27,7 +27,7 @@
         <div class="two">
             <img src="https://sukripta.github.io/parking-go/assets/images/Image-2.jpeg">
             <div class="hidden">
-                <p id="two">Parking Go makes the job easy for you, by allowing you to book spots directly from your phone.</p>
+                <p id="two">Parking Go makes the job easy for you, by allowing you to book spots directly from your phone.</p><br>
                 <button class="btn-diff">Worldwide&nbsp;<i class="fa fa-globe" aria-hidden="true"></i></button>
             </div>
 
@@ -35,7 +35,7 @@
         <div class="three">
             <img src="https://sukripta.github.io/parking-go/assets/images/Image-3.jpeg">
             <div class="hidden">
-                <p id="three">You can also register slots owned by you, to be used by those in need of parking.</p>
+                <p id="three">You can also register slots owned by you, to be used by those in need of parking.</p><br>
                 <button class="btn-out">News&nbsp;<i class="fa fa-external-link-square" aria-hidden="true"></i></button>
             </div>
 
@@ -158,22 +158,22 @@
         color: white;
         line-height: 25px;
         font-size: 1.5vw;
-        font-weight: 600;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     #two {
         line-height: 25px;
         color: white;
         font-size: 1.5vw;
-        font-weight: 600;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     #three {
         line-height: 25px;
         color: #374785;
         font-size: 1.5vw;
-        font-weight: 600;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 400;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     .one:hover .hidden,.two:hover .hidden,.three:hover .hidden{
         visibility: visible;
