--- a/src/app/dashboard/router/router.component.html
+++ b/src/app/dashboard/router/router.component.html
@@ -1,4 +1,4 @@
-<div class="heading">
+<div id="heading">
     <a routerLink="/dashboard"><img src="{{imageUrl}}"></a>
     <a routerLink="/dashboard" href=""><h1>PARKING GO</h1></a>
     <div id="list">
