--- a/src/app/dashboard/router/router.component.css
+++ b/src/app/dashboard/router/router.component.css
@@ -32,7 +32,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1vw;
 }
-.heading img{
+#heading img{
     position: absolute;
     left: 2%;
     top: 5%;
@@ -40,14 +40,14 @@
     height: 90%;
     width: 4.7%;
 }
-.heading {
+#heading {
     position: absolute;
     top: 0%;
     background-color: #f8e9a1;
     width: 100%;
     height: 10%;
 }
-.heading h1 {
+#heading h1 {
     color: #374785;
     position: absolute;
     left: 12%;
