Tried http post request

--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -2,3 +2,19 @@
 
 <app-router></app-router>
 
+<div class="con">
+    {{array.userName}}
+    {{array.uPhone}}
+    {{array.uEmail}}
+</div>
+
+<style>
+    .con {
+        position: absolute;
+        top: 30%;
+        width: 100%;
+        height: 10%;
+        background-color: bisque;
+    }
+</style>
+
