--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,7 +14,7 @@
             <button>Sign Up</button>
         </div>
     </div>
-    <!--Comment Comment-->
+   <!--Comment-->
 
     <div class="content">
         <div class="one">
