--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -1,20 +1,204 @@
 <app-loader></app-loader>
+<div class="main-container">
+    <app-router></app-router>
+    <div class="inside">
+        <div class="first">
+            <img id="profile"
+                src="https://st3.depositphotos.com/6672868/13701/v/600/depositphotos_137014128-stock-illustration-user-profile-icon.jpg">
+        </div>
+        <div class="second">
+            <div class="third">
+                <p><i class="fa fa-user" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.userName}}</p>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <p><i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.uPhone}}</p>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <p><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.uEmail}}</p>
+            </div>
+            <div class="fourth">
+                <h1>Vehicle Details</h1>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th *ngFor="let vehicle of vehicles">{{vehicle}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let option of array1.cars;index as i">
+                            <th>{{i+1}}</th>
+                            <td>{{option.vehicleType}}</td>
+                            <td>{{option.vehicleModel}}</td>
+                            <td>{{option.vehicleNum}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-<app-router></app-router>
+        </div>
+    </div>
+    <div class="footer">
+        <!-- Add icons of social media -->
+        <div class="social">
+            <a class="fa fa-facebook"></a>
+            <a class="fa fa-twitter"></a>
+            <a class="fa fa-google"></a>
+            <a class="fa fa-linkedin"></a>
+            <a class="fa fa-youtube"></a>
+            <a class="fa fa-instagram"></a>
+        </div>
+    </div>
 
-<div class="con">
-    {{array.userName}}
-    {{array.uPhone}}
-    {{array.uEmail}}
+
 </div>
-
 <style>
-    .con {
+.social{
+    position: absolute;
+    top: 30%;
+    width: 100%;
+    left: 5%;
+}
+
+    .fa:hover {
+        opacity: 0.7;
+        text-decoration: none;
+    }
+
+    .fa-facebook {
+        background: #3B5998;
+        color: white;
+        margin-right: 3%;
+        font-size: 2vw;
+        padding: 3% 4% 3% 4%;
+        border-radius: 100%;
+    }
+
+    .fa-twitter {
+        background: #55ACEE;
+        color: white;
+        font-size: 2vw;
+        margin-right: 3%;
+        padding: 3%;
+        border-radius: 100%;
+    }
+
+    .fa-google {
+        background: #dd4b39;
+        color: white;
+        margin-right: 3%;
+        font-size: 2vw;
+        padding: 3%;
+        border-radius: 100%;
+    }
+
+    .fa-linkedin {
+        background: #007bb5;
+        margin-right: 3%;
+        color: white;
+        font-size: 2vw;
+        padding: 3%;
+        border-radius: 100%;
+    }
+
+    .fa-youtube {
+        background: #bb0000;
+        margin-right: 3%;
+        color: white;
+        font-size: 2vw;
+        padding: 3%;
+        border-radius: 100%;
+    }
+
+    .fa-instagram {
+        background: #125688;
+        margin-right: 3%;
+        color: white;
+        font-size: 2vw;
+        padding: 3%;
+        border-radius: 100%;
+    }
+
+    .fourth {
         position: absolute;
-        top: 30%;
+        top: 15%;
+        left: 10%;
+        width: 80%;
+
+    }
+
+    .table {
         width: 100%;
-        height: 10%;
-        background-color: bisque;
+        height: 100%;
+        color: white;
+    }
+
+    .third {
+        position: absolute;
+        top: 5%;
+        left: 10%;
+    }
+
+    .third p {
+        display: inline;
+        color: white;
+        font-size: 2vw;
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .second h1 {
+        color: white;
+        font-size: 2vw;
+        top: 20%;
+        left: 10%;
+        font-weight: 400;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .footer {
+        position: absolute;
+        bottom: 0%;
+        height: 20%;
+        width: 30%;
+        left: 0%;
+        background-color: #a8d0e6;
+    }
+
+    .first img {
+        position: absolute;
+        left: 10%;
+        top: 10%;
+        width: 80%;
+        height: 80%;
+    }
+
+    .first {
+        position: absolute;
+        top: 10%;
+        left: 0%;
+        width: 30%;
+        height: 70%;
+        background-image: url(https://cdn.cnn.com/cnnnext/dam/assets/150701183623-trafficanimation03.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: auto;
+        transition: all 0.5s;
+    }
+
+    #profile {
+        border-radius: 100%;
+        height: 40%;
+        width: 45%;
+        top: 30%;
+        left: 77%;
+        z-index: 1;
+    }
+
+    .second {
+        transition: width 0.5s;
+        position: absolute;
+        width: 70%;
+        height: 90%;
+        top: 10%;
+        right: 0%;
+        background-color: #24305E;
     }
 </style>
-
