Delete feature is added

--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -28,6 +28,7 @@
                             <td>{{option.vehicleType}}</td>
                             <td>{{option.vehicleModel}}</td>
                             <td>{{option.vehicleNum}}</td>
+                            <td><button class="btn btn-danger" (click)="deleteVehicle(option.vehicleNum)">Delete</button></td>
                         </tr>
                     </tbody>
                 </table>
