--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -23,12 +23,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let option of array1.cars;index as i">
+                        <tr *ngFor="let option of array1.cars;index as i" class="data">
                             <th>{{i+1}}</th>
                             <td>{{option.vehicleType}}</td>
                             <td>{{option.vehicleModel}}</td>
                             <td>{{option.vehicleNum}}</td>
-                            <td><button class="btn btn-danger" (click)="deleteVehicle(option.vehicleNum)">Delete</button></td>
+                            <td><button class="delete" (click)="deleteVehicle(option.vehicleNum)">Delete</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -41,9 +41,7 @@
         <div class="social">
             <a class="fa fa-facebook"></a>
             <a class="fa fa-twitter"></a>
-            <a class="fa fa-google"></a>
             <a class="fa fa-linkedin"></a>
-            <a class="fa fa-youtube"></a>
             <a class="fa fa-instagram"></a>
         </div>
     </div>
@@ -51,11 +49,31 @@
 
 </div>
 <style>
+    .data {
+        transition: background-color 0.5s;
+    }
+    .data:hover{
+        background-color: #125688;
+    }
+
+    .delete {
+        background-color:  #f76c6c;
+        border: none;
+        outline: none;
+        color: white;
+        border-radius: 30px;
+        padding: 5% 10% 5% 10%;
+        transition: background-color 0.5s;
+    }
+    .delete:hover {
+        background-color:  #e42a2a;
+    }
+
 .social{
     position: absolute;
     top: 30%;
     width: 100%;
-    left: 5%;
+    left: 10%;
 }
 
     .fa:hover {
@@ -66,7 +84,7 @@
     .fa-facebook {
         background: #3B5998;
         color: white;
-        margin-right: 3%;
+        margin-right: 10%;
         font-size: 2vw;
         padding: 3% 4% 3% 4%;
         border-radius: 100%;
@@ -76,41 +94,25 @@
         background: #55ACEE;
         color: white;
         font-size: 2vw;
-        margin-right: 3%;
+        margin-right: 10%;
         padding: 3%;
         border-radius: 100%;
     }
 
-    .fa-google {
-        background: #dd4b39;
-        color: white;
-        margin-right: 3%;
-        font-size: 2vw;
-        padding: 3%;
-        border-radius: 100%;
-    }
-
+    
     .fa-linkedin {
         background: #007bb5;
-        margin-right: 3%;
+        margin-right: 10%;
         color: white;
         font-size: 2vw;
         padding: 3%;
         border-radius: 100%;
     }
 
-    .fa-youtube {
-        background: #bb0000;
-        margin-right: 3%;
-        color: white;
-        font-size: 2vw;
-        padding: 3%;
-        border-radius: 100%;
-    }
 
     .fa-instagram {
         background: #125688;
-        margin-right: 3%;
+        margin-right: 10%;
         color: white;
         font-size: 2vw;
         padding: 3%;
