Completed Help and Contact Us sections

--- a/src/app/dashboard/navbar/contact.component.html
+++ b/src/app/dashboard/navbar/contact.component.html
@@ -1,3 +1,5 @@
 <div>
-    <h1> This is contact us</h1>
+    <p><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;contact.admin@parkinggo.ac.in</p>
+    <p><i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;1888-8794-8797</p>
+
 </div>
