--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -5,6 +5,11 @@
         <div class="first">
             <img id="profile"
                 src="https://st3.depositphotos.com/6672868/13701/v/600/depositphotos_137014128-stock-illustration-user-profile-icon.jpg">
+                <div class="third-hidden">
+                    <p><i class="fa fa-user" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.userName}}</p>
+                    <p><i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.uPhone}}</p>
+                    <p><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;:&nbsp;{{array1.uEmail}}</p>
+                </div>   
         </div>
         <div class="second">
             <div class="third">
@@ -28,7 +33,7 @@
                             <td>{{option.vehicleType}}</td>
                             <td>{{option.vehicleModel}}</td>
                             <td>{{option.vehicleNum}}</td>
-                            <td><button class="delete" (click)="deleteVehicle(option.vehicleNum)">Delete</button></td>
+                            <td><button class="delete" (click)="deleteVehicle(option.vehicleNum)">Delete</button><button id="cross" (click)="deleteVehicle(option.vehicleNum)"><i class="fa fa-times" aria-hidden="true"></i></button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -49,6 +54,13 @@
 
 </div>
 <style>
+    #cross {
+        display: none;
+    }
+    .third-hidden {
+        display: none;
+    }
+
     .data {
         transition: background-color 0.5s;
     }
@@ -131,6 +143,7 @@
         width: 100%;
         height: 100%;
         color: white;
+        font-size: 1.2vw;
     }
 
     .third {
@@ -203,5 +216,95 @@
         top: 10%;
         right: 0%;
         background-color: #24305E;
+    }
+
+    @media screen and (max-width:480px) {
+        .fourth {
+            display: block;
+            left: 0%;
+            top: 10%;
+            width: 100%;
+
+        }
+        .first {
+            width: 100%;
+            height: 30%;
+            top: 10%;
+            background-image: linear-gradient(rgba(255, 255, 255, 0.715), rgba(255, 255, 255, 0.738)), url(https://cdn.cnn.com/cnnnext/dam/assets/150701183623-trafficanimation03.jpg);
+        } 
+        .second {
+            position: absolute;
+            left: 0%;
+            top: 40%;
+            height: 60%;
+            width: 100%;
+        }
+        #profile {
+            height: 100px;
+            width: 100px;
+            position: absolute;
+            top: 70%;
+            left: 40%;
+        }
+        .footer {
+            display: block;
+            width: 20%;
+            left: 80%;
+            height: 30%;
+            top: 10%;
+
+        }
+        .social {
+            top: 10%;
+            left: 30%;
+            margin-right: 0%;
+            width: 60%;
+            color: #a8d0e6;
+        }
+        .social a {
+            margin-right: 0%;
+            margin-bottom: 10%;
+            text-decoration: none;
+            display: list-item;
+            padding: 0%;
+            font-size: 4.5vw;
+            width: 58%;
+            padding: 15%;
+            color: #a8d0e6;
+        }
+        .third {
+            display: none;
+        }
+        .third-hidden {
+            display: block;
+            color: #24305E;
+            position: absolute;
+            top: 10%;
+            left: 10%;
+            width: 90%;
+            font-size: 4.5vw;
+            font-weight: 500;
+        }
+        .delete {
+            display: none;
+        }
+        .table {
+            color: #f8e9a1;
+            font-size: 4vw;
+        }
+        #cross {
+            display: block;
+            background-color: #24305E;
+            color: #f8e9a1;
+            font-size: 4vw;
+            outline: hidden;
+            border: none;
+        }
+        .fourth h1{
+            font-size: 4.5vw;
+            padding-left: 37%;
+            color: #f8e9a1;
+            font-weight: 700;
+        }
     }
 </style>
