--- a/src/app/dashboard/router/router.component.css
+++ b/src/app/dashboard/router/router.component.css
@@ -42,7 +42,7 @@
     width: 4.7%;
 }
 #heading {
-    position: absolute;
+    position: fixed;
     top: 0%;
     background-color: #f8e9a1;
     width: 100%;
