--- a/src/app/dashboard/router/router.component.html
+++ b/src/app/dashboard/router/router.component.html
@@ -1,13 +1,89 @@
 <div id="heading">
     <a routerLink="/dashboard"><img src="{{imageUrl}}"></a>
-    <a routerLink="/dashboard" href=""><h1>PARKING GO</h1></a>
+    <a routerLink="/dashboard" href="">
+        <h1>PARKING GO</h1>
+    </a>
     <div id="list">
         <ul class="list">
-            <a routerLinkActive="active" routerLink="/dashboard/profile"><li>Profile&nbsp;<i class="fa fa-user" aria-hidden="true"></i></li></a>
-            <a routerLinkActive="active" routerLink="/dashboard/active"><li>Active Booking&nbsp;<i class="fa fa-check-circle" aria-hidden="true"></i></li></a>
-            <a routerLinkActive="active" routerLink="/dashboard/previous"><li>Previous Booking&nbsp;<i class="fa fa-list-alt" aria-hidden="true"></i></li></a>
-            <a routerLinkActive="active" routerLink="/dashboard/registered"><li>Registered Spots&nbsp;<i class="fa fa-bookmark" aria-hidden="true"></i></li></a>
-            <a routerLink="/homepage"><li id="logout">Log Out&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></li></a>
+            <a routerLinkActive="active" routerLink="/dashboard/profile">
+                <li>Profile&nbsp;<i class="fa fa-user" aria-hidden="true"></i></li>
+            </a>
+            <a routerLinkActive="active" routerLink="/dashboard/active">
+                <li>Active Booking&nbsp;<i class="fa fa-check-circle" aria-hidden="true"></i></li>
+            </a>
+            <a routerLinkActive="active" routerLink="/dashboard/previous">
+                <li>Previous Booking&nbsp;<i class="fa fa-list-alt" aria-hidden="true"></i></li>
+            </a>
+            <a routerLinkActive="active" routerLink="/dashboard/registered">
+                <li>Registered Spots&nbsp;<i class="fa fa-bookmark" aria-hidden="true"></i></li>
+            </a>
+            <a routerLink="/homepage">
+                <li id="logout">Log Out&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></li>
+            </a>
         </ul>
     </div>
+    <div class="dropdown">
+        <button mat-icon-button [matMenuTriggerFor]="menu" type="button"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <mat-menu id="menu" #menu="matMenu">
+            <a class="links" mat-menu-item routerLinkActive="active" routerLink="/dashboard/profile">
+                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Profile
+            </a>
+            <a class="links" mat-menu-item routerLinkActive="active" routerLink="/dashboard/active">
+                <i class="fa fa-check-circle" aria-hidden="true"></i>&nbsp;Active Booking
+            </a>
+            <a class="links" mat-menu-item routerLinkActive="active" routerLink="/dashboard/previous">
+                <i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;Previous Booking
+            </a>
+            <a class="links" mat-menu-item routerLinkActive="active" routerLink="/dashboard/registered">
+                <i class="fa fa-bookmark" aria-hidden="true"></i>&nbsp;Registered Spots
+            </a>
+            <a class="links" mat-menu-item routerLink="/homepage">
+                <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Log Out
+            </a>
+        </mat-menu>
+
+    </div>
 </div>
+
+<style>
+
+    .dropdown {
+        display: none;
+        left: 85%;
+        top: 30%;
+    }
+    .dropdown button {
+        background-color: #f8e9a1;
+        font-size: 5.5vw;
+        outline: none;
+        border: none;
+    }
+    .links {
+        text-decoration: none;
+        text-decoration-style: none;
+        font-weight: 400;
+        font-size: 4vw;
+        
+    }
+
+    @media screen and (max-width:480px) {
+        #heading h1 {
+            font-size: 10vw;
+            left: 25%;
+        }
+
+        #list {
+            display: none;
+        }
+
+        #heading img {
+            height: 95%;
+            width: 15%;
+        }
+        .dropdown {
+            display: block;
+        }
+
+        
+    }
+</style>
