Made loader responsive

--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -6,3 +6,12 @@ visible="false"
 >
   <img id='image' src="https://i.ibb.co/bzkxx2K/Logo-removebg-preview.png">
 </ngx-spinner>
+
+<style>
+  @media screen and (max-width: 480px){
+    #image {
+      height: 140px;
+      width: 140px;
+    }
+  }
+</style>
