Register Slots, Book Parking Slots

--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -13,11 +13,11 @@
             </div>
             
         </div>
-        <div class="one">
+        <div class="one" routerLink="/dashboard/book-spots" style="cursor: pointer;">
             
-            <div id="search">
+            <div id="search" >
                 <a><img id="search-img" src="{{searchUrl}}"></a>
-                <div class="parent">
+                <div class="parent" >
                     <p id="detail">SEARCH&nbsp;<i class="fa fa-search"></i></p>
                     <div class="child">
                         <hr id="hr">
@@ -26,9 +26,9 @@
                 </div>
             </div>
         </div>
-        <div class="two">
-            <div id="search">
-                <a routerLink="/dashboard/register"><img id="search-img" src="{{registerUrl}}"></a>
+        <div class="two" routerLink="/dashboard/register-spots" style="cursor: pointer;">
+            <div id="search" >
+                <a ><img id="search-img" src="{{registerUrl}}"></a>
                 <div class="parent">
                     <p id="detail">REGISTER&nbsp;<i class="fa fa-user-plus"></i></p>
                     <div class="child">
