--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -39,10 +39,10 @@
     <div class="footer">
         <!-- Add icons of social media -->
         <div class="social">
-            <a class="fa fa-facebook"></a>
-            <a class="fa fa-twitter"></a>
-            <a class="fa fa-linkedin"></a>
-            <a class="fa fa-instagram"></a>
+            <a class="fab fa-facebook-f profile-fb"></a>
+            <a class="fab fa-twitter profile-tw"></a>
+            <a class="fab fa-linkedin-in profile-lin"></a>
+            <a class="fab fa-instagram profile-in"></a>
         </div>
     </div>
 
