--- a/src/app/dashboard/router/router.component.html
+++ b/src/app/dashboard/router/router.component.html
@@ -7,7 +7,7 @@
             <a routerLinkActive="active" routerLink="/dashboard/active"><li>Active Booking&nbsp;<i class="fa fa-check-circle" aria-hidden="true"></i></li></a>
             <a routerLinkActive="active" routerLink="/dashboard/previous"><li>Previous Booking&nbsp;<i class="fa fa-list-alt" aria-hidden="true"></i></li></a>
             <a routerLinkActive="active" routerLink="/dashboard/registered"><li>Registered Spots&nbsp;<i class="fa fa-bookmark" aria-hidden="true"></i></li></a>
-            <a routerLink="/homepage"><li id="logout">Log Out&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></li></a>
+            <a routerLink="/homepage"><li id="logout">Log Out&nbsp;<i class="fas fa-sign-out-alt" aria-hidden="true"></i></li></a>
         </ul>
     </div>
 </div>
