--- a/src/app/searchmap/booking-details-form/booking-details-form.component.css
+++ b/src/app/searchmap/booking-details-form/booking-details-form.component.css
@@ -1,22 +1,25 @@
 ::-webkit-scrollbar {
   width: 5px;
 }
-::-webkit-scrollbar-track {
+ ::-webkit-scrollbar-track {
+   
   border-radius: 10px;
 }
-
+ 
 /* Handle */
-::-webkit-scrollbar-thumb {
-  background: #f8e9a1;
+ ::-webkit-scrollbar-thumb {
+  background: #f8e9a1; 
   border-radius: 10px;
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: gold;
+ ::-webkit-scrollbar-thumb:hover {
+  background:gold; 
 }
-.form-car-row:hover {
-  background-color: #f8e9a1;
+.form-car-row:hover
+{
+    background-color: #f8e9a1 ;
+
 }
 
 .form-error {
