--- a/src/app/searchmap/booking-details-form/booking-details-form.component.html
+++ b/src/app/searchmap/booking-details-form/booking-details-form.component.html
@@ -11,7 +11,7 @@
     min-height: calc(100vh);
   "
 >
-<div class="w-100 row m-0 d-flex justify-content-center py-5 px-4"
+<div class="w-100 row m-0 d-flex justify-content-center "
 style="background-color: rgba(0, 0, 0, 0.596);
 min-height: calc(100vh);"
 >
