--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,13 +10,13 @@
             <a routerLink="/homepage"><h1>PARKING GO</h1></a>
         </div>
         <div class="buttons">
-            <a routerLink="/dashboard"><button>Sign In</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <button>Sign Up</button>
+            <a routerLink="/signin"><button>Sign In</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a routerLink="/signup"><button>Sign Up</button></a>
         </div>
     </div>
     <div class="hidden-buttons">
-        <a routerLink="/dashboard"><button>Sign In</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <button>Sign Up</button>       
+        <a routerLink="/signin"><button>Sign In</button></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a routerLink="/signup"><button>Sign Up</button></a>
     </div>
 
     <div class="content">
