forgotten password or username dialog done

--- a/src/app/dialog-password/dialog-password.component.html
+++ b/src/app/dialog-password/dialog-password.component.html
@@ -7,7 +7,7 @@
             <div *ngIf="username.errors?.required" class="alert alert-danger">Username is required</div>
           </div>
     </div>
-    <!-- <div (click)="open()" style="color:dodgerblue">Forgotten Username ? </div> -->
+    <div (click)="open()" style="color:dodgerblue; cursor: pointer;">Forgotten Username ? </div>
     <div class="form-group mt-2">
         <label>Email</label>
         <input type="email" formControlName="email" class="form-control"/>
