Completed active booking designing

--- a/src/app/active-booking-details/active-booking-details.component.html
+++ b/src/app/active-booking-details/active-booking-details.component.html
@@ -1,4 +1,5 @@
 <div style="min-height: calc(100vh); background-color: brown;padding:5% 0%;">
+  <app-router></app-router>
   <div
     style="background-color: white; width: 65%; margin: auto;text-align: center;font-size: 1.3em;padding: 10px;border-radius: 5px;padding-bottom: 25px;"
     *ngIf="booking"
