Encryption, QR Code, Previous Booking, Registered Spots

--- a/src/app/dashboard/active/active.component.html
+++ b/src/app/dashboard/active/active.component.html
@@ -1,7 +1,7 @@
 <app-loader></app-loader>
 <div
   style="
-    background-image: url('assets/images/vintage.jpg');
+    background-image: url('assets/images/activeBookingBG.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
