Completed about us and worldwide page

--- a/src/app/active-booking-details/active-booking-details.component.html
+++ b/src/app/active-booking-details/active-booking-details.component.html
@@ -1,4 +1,5 @@
-<div style="min-height: calc(100vh); background-color: brown;padding:5% 0%;">
+<app-loader></app-loader>
+<div style="min-height: calc(100vh); background-color: #f76c6c;padding:5% 0%;">
   <app-router></app-router>
   <div
     style="background-color: white; width: 65%; margin: auto;text-align: center;font-size: 1.3em;padding: 10px;border-radius: 5px;padding-bottom: 25px;"
@@ -119,7 +120,7 @@
     </div>
     <div class="w-100">
         <div class="btn btn-dark btn-lg mb-3 w-100" (click)="openQREntry()">View Entry QR Code</div>
-        <div class="btn btn-light w-100" (click)="openQRExit()">View Exit QR Code</div>
+        <div class="btn btn-light w-100" >View Exit QR Code</div>
       </div>
   </div>
 </div>
