--- a/src/app/dashboard/router/router.component.html
+++ b/src/app/dashboard/router/router.component.html
@@ -30,7 +30,7 @@
                 <i class="fa fa-bookmark" aria-hidden="true"></i>&nbsp;Registered Spots
             </a>
             <a class="links" mat-menu-item routerLink="/homepage">
-                <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Log Out
+                <i class="fas fa-sign-out-alt"></i>&nbsp;Log Out  
             </a>
         </mat-menu>
 
