--- a/src/app/searchmap/confirm-booking-dialog/confirm-booking-dialog.component.html
+++ b/src/app/searchmap/confirm-booking-dialog/confirm-booking-dialog.component.html
@@ -75,13 +75,13 @@
       <div>
         <span style="font-weight: bolder; margin-right: 10px">From:</span
         ><span style="padding-left: 5px; padding-right: 5px"
-          >{{_data.from}}</span
+          >{{fromDate}}</span
         >
       </div>
       <div>
         <span style="font-weight: bolder; margin-right: 10px">To:</span
         ><span style="padding-left: 5px; padding-right: 5px"
-          >{{_data.to}}</span
+          >{{toDate}}</span
         >
       </div>
     </div>
@@ -98,11 +98,11 @@
         >Cost</span
       >
     </div>
-    <div style="font-size: 1.1em">
-      <span style="font-weight: bolder; margin-right: 10px"
-        >&#x20b9; {{ _data.cost }}/hr</span
+    <div style="font-size: 3em">
+      <span style=" margin-right: 10px"
+        >&#x20b9; {{cost }}</span
       >
-      per slot
+      
     </div>
   </div>
 </div>
