--- a/src/app/sign-in/signin.component.html
+++ b/src/app/sign-in/signin.component.html
@@ -1,6 +1,12 @@
 <app-loader></app-loader>
-<div class="bg-img pt-5">
-    <form [formGroup]="form2" (ngSubmit)="signin()">
+<div class="pt-5" style="background-image: url('assets/images/Form_background.jpg');
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+min-height: calc(100vh);
+margin: 0;">
+    <form [formGroup]="form2" >
       <h2>Sign In</h2>
   
       <div class="form-group">
@@ -9,6 +15,7 @@
           <div *ngIf="(email.invalid && email.touched) || email.dirty">
               <div *ngIf="email.errors?.required" class="alert alert-danger">Email is required</div>
               <div *ngIf="email.errors?.pattern" class="alert alert-danger">Please provide a valid email address</div>
+              <div class="my-3" style="font-weight: bold; color:dodgerblue;" *ngIf="emailNotRegistered">Email is not registered. Please sign up first.</div>
             </div>
       </div>
   
@@ -19,18 +26,17 @@
           <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
               <div *ngIf="password.errors.required">Password is required</div>
               <div *ngIf="password.errors.minlength">Password should have minimum {{password.errors.minlength.requiredLength}} digits</div>
+              
           </div>
+          <div class="my-3" style="font-weight: bold; color: red;" *ngIf="passwordMismatch">Password is incorrect</div>
         </div>
       <div class="form-group">
-          <button class="btn btn-outline-primary" [disabled]="!form2.valid">Sign In</button>
+          <button class="btn btn-outline-primary" [disabled]="!form2.valid" (click)="signIn()">Sign In</button>
       </div>
-      <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-          <label class="form-check-label mb-1" for="inlineCheckbox1">Remember me</label>
-        </div>
+      
         <div>
           <p>New User? <a routerLink="/signup" style="color:dodgerblue">Sign Up</a>.</p>
-          <div (click)="open()" style="color:dodgerblue; cursor: pointer;">Forgotten Password ? </div>
+          
         </div>
   </form>
   </div>
