--- a/src/app/dashboard/navbar/help.component.html
+++ b/src/app/dashboard/navbar/help.component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div id="buttons">
-                <button mat-button class="btn btn-app" type="submit" [disabled]="!f.valid" [mat-dialog-close] (click)="ping()">Submit</button>
+                <button mat-button class="btn btn-app" type="submit" [disabled]="!f.valid" (click)="ping()">Submit</button>
                 <button mat-button class="btn" type="submit" [mat-dialog-close]>Cancel</button>
             </div>
         </div>
