--- a/src/app/qr-page/qr-page.component.html
+++ b/src/app/qr-page/qr-page.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="row justify-content-center" style="background-color: teal;min-height: calc(100vh);padding: 20px;">
     <div class="col col-12 col-lg-5" style="background-color:white;padding: 20px;border-radius: 10px;">
         <div class=" p-5 " style="background-color: white;box-shadow: 0px 0px 5px gold;border-radius: 5px;">
