--- a/src/app/dashboard/router/router.component.html
+++ b/src/app/dashboard/router/router.component.html
@@ -10,7 +10,7 @@
             <a routerLinkActive="active" routerLink="/dashboard/active"><li>Active Booking&nbsp;<i class="fa fa-check-circle" aria-hidden="true"></i></li></a>
             <a routerLinkActive="active" routerLink="/dashboard/previous"><li>Previous Booking&nbsp;<i class="fa fa-list-alt" aria-hidden="true"></i></li></a>
             <a routerLinkActive="active" routerLink="/dashboard/registered"><li>Registered Spots&nbsp;<i class="fa fa-bookmark" aria-hidden="true"></i></li></a>
-            <a routerLink="/homepage" (click)="logout()"><li id="logout">Log Out&nbsp;<i class="fas fa-sign-out-alt" aria-hidden="true"></i></li></a>
+            <a style="cursor: pointer;"  (click)="logout()"><li id="logout">Log Out&nbsp;<i class="fas fa-sign-out-alt" aria-hidden="true"></i></li></a>
 
         </ul>
     </div>
@@ -30,7 +30,7 @@
                 <i class="fa fa-bookmark" aria-hidden="true"></i>&nbsp;Registered Spots
             </a>
 
-            <a class="links" mat-menu-item routerLink="/homepage" (click)="logout()">
+            <a class="links" mat-menu-item style="cursor: pointer;" (click)="logout()">
                 <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Log Out
 
             </a>
